// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Snapshots should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #c3c7cb;
  border-top: 2px solid;
  border-top-color: #868a8e;
  border-right: 2px solid;
  border-right-color: #ffffff;
  border-bottom: 2px solid;
  border-bottom-color: #ffffff;
  border-left: 2px solid;
  border-left-color: #868a8e;
  border-radius: 0;
  font-weight: bold;
  overflow: hidden;
  width: 48px;
  height: 48px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`<Avatar /> Snapshots should match snapshot in default avatar with children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #c3c7cb;
  border-top: 2px solid;
  border-top-color: #868a8e;
  border-right: 2px solid;
  border-right-color: #ffffff;
  border-bottom: 2px solid;
  border-bottom-color: #ffffff;
  border-left: 2px solid;
  border-left-color: #868a8e;
  border-radius: 0;
  font-weight: bold;
  overflow: hidden;
  width: 48px;
  height: 48px;
}

<div>
  <div
    class="c0"
  >
    <p>
      GG
    </p>
  </div>
</div>
`;

exports[`<Avatar /> Snapshots should match snapshot in default avatar with children and circle 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #c3c7cb;
  border-top: 2px solid;
  border-top-color: #868a8e;
  border-right: 2px solid;
  border-right-color: #ffffff;
  border-bottom: 2px solid;
  border-bottom-color: #ffffff;
  border-left: 2px solid;
  border-left-color: #868a8e;
  border-radius: 50%;
  font-weight: bold;
  overflow: hidden;
  width: 48px;
  height: 48px;
}

<div>
  <div
    class="c0"
  >
    <p>
      GG
    </p>
  </div>
</div>
`;

exports[`<Avatar /> Snapshots should match snapshot in default avatar with src and alt prop 1`] = `
.c1 {
  max-width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #c3c7cb;
  border-top: 2px solid;
  border-top-color: #868a8e;
  border-right: 2px solid;
  border-right-color: #ffffff;
  border-bottom: 2px solid;
  border-bottom-color: #ffffff;
  border-left: 2px solid;
  border-left-color: #868a8e;
  border-radius: 0;
  font-weight: bold;
  overflow: hidden;
  width: 48px;
  height: 48px;
}

<div>
  <div
    class="c0"
  >
    <img
      alt="React95 brand logo"
      class="c1"
      src="https://github.com/React95.png"
    />
  </div>
</div>
`;
